Fixed Spacing for Mobile
There was a lack of space between the selectable elements. This was fixed by using Gap and assigning the values that worked best for this issue.

--- a/css.scss
+++ b/css.scss
@@ -96,14 +96,17 @@ body{
 
 }
 
-@media (min-width: 1000px) and (max-width: 1080px)
+@media (min-width: 1000px) and (max-width: 1079px)
 {   
     .pick-choice-title{      
-        --top-position: 200px;
+        --top-position: 100px;
      }
     .options-container
     {
         --top-position: 200px;  
+        transform: scale(0.8);
+        --width: fit-content;
+        gap: 100px;
     }
 
 }
@@ -140,6 +143,7 @@ body{
         width: fit-content;
         height: fit-content;
         justify-content:space-evenly;
+        gap: 60px;
         margin-right: auto;
         margin-left: auto;
         transform: scale(0.5);
